--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 title: My Resume
-url: 'http://junlulocky.com'
+url: 'sungbumvv.github.io'
 baseurl: '/PanelCV' #change it according to your repository name
 
 
