--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ baseurl: '/sungbumvv.github.io' #change it according to your repository name
 
 
 # Profile information
-yourname: 이성범(sungbeom lee)  ## put your name
+yourname: 이성범  ## put your name
 title: '초보 웹개발자'  ## your title
 location: 서울시 도봉구 쌍문4동 
 
