--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 title: 개발공부용 깃허브
-url: 'sungbumvv.github.io'
-baseurl: '/sungbumvv.github.io' #change it according to your repository name
+url: 'https://sungbumvv.github.io'
+baseurl: '' #change it according to your repository name
 
 
 
